[gd_scene load_steps=43 format=2]

[ext_resource path="res://world/objects/ancient_pillar/Pillar.tscn" type="PackedScene" id=1]
[ext_resource path="res://player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://world/objects/floor/greece_floor2.png" type="Texture" id=3]
[ext_resource path="res://enemies/romans/romanSoldier1.tscn" type="PackedScene" id=4]
[ext_resource path="res://world/levels/alexandriaLevel.gd" type="Script" id=5]
[ext_resource path="res://player/Camera2D.tscn" type="PackedScene" id=6]
[ext_resource path="res://world/objects/spaceship/ship.tscn" type="PackedScene" id=7]
[ext_resource path="res://world/objects/dr/dr.tscn" type="PackedScene" id=8]
[ext_resource path="res://world/objects/backgrounds/skyBG.png" type="Texture" id=10]
[ext_resource path="res://UIs/HealthUI.tscn" type="PackedScene" id=11]
[ext_resource path="res://world/objects/ancient_pillar/pillar_1_withsky.png" type="Texture" id=12]
[ext_resource path="res://world/levels/Countdown.gd" type="Script" id=13]
[ext_resource path="res://world/objects/backgrounds/timerBG.png" type="Texture" id=14]
[ext_resource path="res://world/objects/library.png" type="Texture" id=15]
[ext_resource path="res://world/objects/floor/greece_floor.png" type="Texture" id=16]
[ext_resource path="res://world/levels/starsBG.gd" type="Script" id=18]
[ext_resource path="res://world/objects/civilians/maleNPC.tscn" type="PackedScene" id=19]
[ext_resource path="res://enemies/romans/romanSHIELDMAN.tscn" type="PackedScene" id=20]
[ext_resource path="res://sounds/warriors charge sound.wav" type="AudioStream" id=21]
[ext_resource path="res://world/objects/civilians/femaleNPC.tscn" type="PackedScene" id=22]
[ext_resource path="res://world/objects/blackage.png" type="Texture" id=23]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;
uniform float scroll_speed;
void fragment() {
	vec2 shifteduv = UV;
	shifteduv.x += TIME * scroll_speed;
	vec4 col = texture(TEXTURE, shifteduv);
	COLOR = col;
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/scroll_speed = null

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 2825.05, 10 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 2797.64, 10 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 536 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 10.56, 946.699 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 1125.69, 768 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 1209.64, 391.8 )

[sub_resource type="CapsuleShape2D" id=9]
radius = 182.09
height = 406.332

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 42.6389, 474.987 )

[sub_resource type="RectangleShape2D" id=11]
extents = Vector2( 60.8706, 296 )

[sub_resource type="DynamicFontData" id=12]
font_path = "res://UIs/GL-Nummernschild-Mtl.ttf"

[sub_resource type="DynamicFont" id=13]
size = 40
font_data = SubResource( 12 )

[sub_resource type="DynamicFontData" id=14]
font_path = "res://UIs/GL-Nummernschild-Mtl.ttf"

[sub_resource type="DynamicFont" id=15]
size = 40
font_data = SubResource( 14 )

[sub_resource type="DynamicFontData" id=16]
font_path = "res://UIs/GL-Nummernschild-Mtl.ttf"

[sub_resource type="DynamicFont" id=17]
size = 40
font_data = SubResource( 16 )

[sub_resource type="DynamicFontData" id=18]
font_path = "res://UIs/GL-Nummernschild-Mtl.ttf"

[sub_resource type="DynamicFont" id=19]
size = 40
font_data = SubResource( 18 )

[sub_resource type="Animation" id=20]
length = 0.4
tracks/0/type = "bezier"
tracks/0/path = NodePath("ColorRect:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("ColorRect:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("ColorRect:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("ColorRect:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.4 )
}

[sub_resource type="RectangleShape2D" id=21]
extents = Vector2( 10, 357.131 )

[node name="alexandriaLevel" type="Node2D"]
script = ExtResource( 5 )

[node name="Camera2D" parent="." instance=ExtResource( 6 )]
pause_mode = 2
position = Vector2( 2559.38, 427.649 )
scale = Vector2( 3, 3 )
smoothing_speed = 2.0

[node name="BottomRight" parent="Camera2D/Limits" index="1"]
position = Vector2( 3232, 784 )

[node name="levelCamera" type="Camera2D" parent="."]
pause_mode = 2
position = Vector2( 680, 376 )
smoothing_enabled = true

[node name="movingCamera" type="Camera2D" parent="."]
pause_mode = 2
position = Vector2( 1298.25, 458.024 )
limit_left = 0
limit_top = 0
limit_right = 3232
limit_bottom = 784
smoothing_enabled = true
smoothing_speed = 2.0

[node name="Tween" type="Tween" parent="movingCamera"]
pause_mode = 2

[node name="YSort" type="YSort" parent="."]

[node name="wall" type="StaticBody2D" parent="YSort"]

[node name="background" type="TextureRect" parent="YSort/wall"]
material = SubResource( 2 )
margin_left = -21.2246
margin_top = 0.143402
margin_right = 3305.78
margin_bottom = 339.143
texture = ExtResource( 10 )
stretch_mode = 2
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}
scroll_speed = 0.03

[node name="library" type="Sprite" parent="YSort/wall"]
position = Vector2( 2323.37, 120.29 )
scale = Vector2( 3.35428, 1.64327 )
texture = ExtResource( 15 )
flip_h = true

[node name="library2" type="Sprite" parent="YSort/wall"]
position = Vector2( 288.044, 116.681 )
scale = Vector2( 2.84735, 1.39492 )
texture = ExtResource( 15 )
flip_h = true

[node name="libraryBIG" type="Sprite" parent="YSort/wall"]
position = Vector2( 1444.34, 83.5226 )
scale = Vector2( 3.00819, 1.94263 )
texture = ExtResource( 15 )

[node name="greece_floor" type="Sprite" parent="YSort/wall"]
position = Vector2( 1599.12, 262.025 )
scale = Vector2( 2, 2 )
texture = ExtResource( 16 )
region_enabled = true
region_rect = Rect2( -1416.3, -0.0670662, 2102.1, 63.0234 )

[node name="upperCollision" type="CollisionShape2D" parent="YSort/wall"]
position = Vector2( 654.947, 195.046 )
shape = SubResource( 3 )

[node name="down" type="CollisionShape2D" parent="YSort/wall"]
position = Vector2( 674.359, 779.701 )
shape = SubResource( 4 )

[node name="right" type="CollisionShape2D" parent="YSort/wall"]
position = Vector2( 3224, 656 )
shape = SubResource( 5 )

[node name="left" type="CollisionShape2D" parent="YSort/wall"]
position = Vector2( -14.9831, 509.424 )
shape = SubResource( 6 )
disabled = true

[node name="upUP" type="CollisionShape2D" parent="YSort/wall"]
position = Vector2( 1100, -768.228 )
shape = SubResource( 7 )

[node name="downDown" type="CollisionShape2D" parent="YSort/wall"]
position = Vector2( 1100, 1162.77 )
shape = SubResource( 8 )

[node name="floor" type="StaticBody2D" parent="YSort"]

[node name="Sprite" type="Sprite" parent="YSort/floor"]
position = Vector2( 1498.88, 613.884 )
scale = Vector2( 1.15836, 1.21637 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( -256.41, -238, 3172.43, 608.855 )

[node name="Player" parent="YSort" instance=ExtResource( 2 )]
pause_mode = 2
position = Vector2( 2559.38, 427.649 )
z_index = 1

[node name="playerCamera" type="RemoteTransform2D" parent="YSort/Player"]
pause_mode = 2
remote_path = NodePath("../../../Camera2D")

[node name="Pillars" type="YSort" parent="YSort"]

[node name="Pillar" parent="YSort/Pillars" instance=ExtResource( 1 )]
position = Vector2( 32, 123.582 )

[node name="Sprite" parent="YSort/Pillars/Pillar" index="0"]
texture = ExtResource( 12 )

[node name="Pillar2" parent="YSort/Pillars" instance=ExtResource( 1 )]
position = Vector2( 325, 123 )

[node name="Sprite" parent="YSort/Pillars/Pillar2" index="0"]
texture = ExtResource( 12 )

[node name="Pillar3" parent="YSort/Pillars" instance=ExtResource( 1 )]
position = Vector2( 623, 123 )

[node name="Sprite" parent="YSort/Pillars/Pillar3" index="0"]
texture = ExtResource( 12 )

[node name="Pillar4" parent="YSort/Pillars" instance=ExtResource( 1 )]
position = Vector2( 918, 125 )

[node name="Sprite" parent="YSort/Pillars/Pillar4" index="0"]
texture = ExtResource( 12 )

[node name="Pillar5" parent="YSort/Pillars" instance=ExtResource( 1 )]
position = Vector2( 169.713, 641.713 )

[node name="Pillar6" parent="YSort/Pillars" instance=ExtResource( 1 )]
position = Vector2( 470.665, 641.713 )

[node name="Pillar7" parent="YSort/Pillars" instance=ExtResource( 1 )]
position = Vector2( 768.378, 640.126 )

[node name="Pillar8" parent="YSort/Pillars" instance=ExtResource( 1 )]
position = Vector2( 1215, 124.98 )

[node name="Sprite" parent="YSort/Pillars/Pillar8" index="0"]
texture = ExtResource( 12 )

[node name="Pillar9" parent="YSort/Pillars" instance=ExtResource( 1 )]
position = Vector2( 1512, 123.703 )

[node name="Sprite" parent="YSort/Pillars/Pillar9" index="0"]
texture = ExtResource( 12 )

[node name="Pillar10" parent="YSort/Pillars" instance=ExtResource( 1 )]
position = Vector2( 1808, 125.108 )

[node name="Sprite" parent="YSort/Pillars/Pillar10" index="0"]
texture = ExtResource( 12 )

[node name="Pillar11" parent="YSort/Pillars" instance=ExtResource( 1 )]
position = Vector2( 2105, 123.691 )

[node name="Sprite" parent="YSort/Pillars/Pillar11" index="0"]
texture = ExtResource( 12 )

[node name="Pillar12" parent="YSort/Pillars" instance=ExtResource( 1 )]
position = Vector2( 2399, 124.582 )

[node name="Sprite" parent="YSort/Pillars/Pillar12" index="0"]
texture = ExtResource( 12 )

[node name="Pillar13" parent="YSort/Pillars" instance=ExtResource( 1 )]
position = Vector2( 2697.11, 125.473 )

[node name="Sprite" parent="YSort/Pillars/Pillar13" index="0"]
texture = ExtResource( 12 )

[node name="Pillar14" parent="YSort/Pillars" instance=ExtResource( 1 )]
position = Vector2( 2994, 125.473 )

[node name="Sprite" parent="YSort/Pillars/Pillar14" index="0"]
texture = ExtResource( 12 )

[node name="Pillar15" parent="YSort/Pillars" instance=ExtResource( 1 )]
position = Vector2( 1066.09, 636.951 )
z_index = 2

[node name="Pillar16" parent="YSort/Pillars" instance=ExtResource( 1 )]
position = Vector2( 1360.77, 637.961 )
z_index = 2

[node name="Pillar17" parent="YSort/Pillars" instance=ExtResource( 1 )]
position = Vector2( 1654.49, 639.083 )
z_index = 2

[node name="Pillar18" parent="YSort/Pillars" instance=ExtResource( 1 )]
position = Vector2( 1955.07, 638.618 )
z_index = 2

[node name="Pillar19" parent="YSort/Pillars" instance=ExtResource( 1 )]
position = Vector2( 2249.11, 637.994 )
z_index = 2

[node name="Pillar20" parent="YSort/Pillars" instance=ExtResource( 1 )]
position = Vector2( 2542.02, 639.476 )
z_index = 2

[node name="Pillar21" parent="YSort/Pillars" instance=ExtResource( 1 )]
position = Vector2( 2836.69, 636.951 )
z_index = 2

[node name="Pillar22" parent="YSort/Pillars" instance=ExtResource( 1 )]
position = Vector2( 3286.31, 127.043 )

[node name="Sprite" parent="YSort/Pillars/Pillar22" index="0"]
texture = ExtResource( 12 )

[node name="Pillar23" parent="YSort/Pillars" instance=ExtResource( 1 )]
position = Vector2( 3136.53, 638.698 )
z_index = 2

[node name="Enemies" type="YSort" parent="YSort"]

[node name="romanSoldier4" parent="YSort/Enemies" instance=ExtResource( 4 )]
position = Vector2( -400.582, 508.782 )

[node name="romanSHIELDMAN" parent="YSort/Enemies" instance=ExtResource( 20 )]
position = Vector2( 104.532, 201.398 )

[node name="romanSoldier1" parent="YSort/Enemies" instance=ExtResource( 4 )]
position = Vector2( 207.846, 290.386 )

[node name="romanSoldier2" parent="YSort/Enemies" instance=ExtResource( 4 )]
position = Vector2( 102.012, 444.096 )

[node name="romanSoldier3" parent="YSort/Enemies" instance=ExtResource( 4 )]
position = Vector2( -369.198, 262.668 )

[node name="ship" parent="YSort" instance=ExtResource( 7 )]
position = Vector2( 2851.05, 269.391 )

[node name="leaveAREA" type="Area2D" parent="YSort"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/leaveAREA"]
position = Vector2( 2769.31, 410.734 )
rotation = 1.5708
shape = SubResource( 9 )

[node name="civilians" type="YSort" parent="YSort"]

[node name="civilianTalk" type="Area2D" parent="YSort/civilians"]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="YSort/civilians/civilianTalk"]
position = Vector2( 1986.24, 651.474 )
shape = SubResource( 10 )

[node name="maleNPC" parent="YSort/civilians" instance=ExtResource( 19 )]
position = Vector2( 1892.73, 195.103 )

[node name="maleNPC2" parent="YSort/civilians" instance=ExtResource( 19 )]
position = Vector2( 2167.67, 615.56 )
z_index = 2

[node name="femaleNPC" parent="YSort/civilians" instance=ExtResource( 22 )]
position = Vector2( 1716.79, 555.336 )
z_index = 2

[node name="femaleNPC2" parent="YSort/civilians" instance=ExtResource( 22 )]
position = Vector2( 2324.53, 176.377 )

[node name="femaleNPC3" parent="YSort/civilians" instance=ExtResource( 22 )]
position = Vector2( 2078.53, 650.377 )
z_index = 3

[node name="StaticBody2D" type="StaticBody2D" parent="YSort"]
position = Vector2( -88.5729, -11.3075 )
scale = Vector2( 1.1, 1 )
z_index = 1

[node name="blackage" type="Sprite" parent="YSort/StaticBody2D"]
position = Vector2( 1293.44, 218.839 )
scale = Vector2( 2, 2 )
texture = ExtResource( 23 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="YSort/StaticBody2D"]
visible = false
position = Vector2( 0.000366211, -130.726 )
scale = Vector2( 1, 1.32589 )
polygon = PoolVector2Array( 1185.61, 374.736, 1195.72, 341.438, 1217.72, 302.194, 1265.89, 302.788, 1308.1, 310.518, 1305.13, 339.654, 1277.78, 360.465, 1252.21, 378.303, 1211.78, 377.709 )

[node name="StaticBody2D2" type="StaticBody2D" parent="YSort"]
position = Vector2( -60.2482, 40.4521 )
scale = Vector2( 1.1, 1 )

[node name="blackage2" type="Sprite" parent="YSort/StaticBody2D2"]
position = Vector2( 1269.89, 511.471 )
scale = Vector2( 2, 2 )
z_index = 2
texture = ExtResource( 23 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="YSort/StaticBody2D2"]
visible = false
position = Vector2( 0, -35.3176 )
polygon = PoolVector2Array( 1163.17, 665.056, 1174.49, 609.368, 1182.05, 587.659, 1239.62, 590.49, 1273.6, 616.919, 1259.44, 632.964, 1233.02, 660.337, 1218.86, 668.832, 1177.33, 670.719 )

[node name="dr" parent="YSort" instance=ExtResource( 8 )]
position = Vector2( 3268.2, -63.1179 )

[node name="shootBox" type="Area2D" parent="."]
pause_mode = 2
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="shootBox"]
pause_mode = 2
position = Vector2( 1191.27, 481.65 )
shape = SubResource( 11 )

[node name="HealthUI" parent="." instance=ExtResource( 11 )]
margin_left = 1071.1
margin_top = 53.9531
margin_right = 1071.1
margin_bottom = 53.9531
rect_scale = Vector2( 5, 5 )

[node name="Dialogic" type="Node2D" parent="."]

[node name="timerCounterr" type="Node2D" parent="."]
position = Vector2( 876.644, 60.5811 )
z_index = 4

[node name="Countdown" type="Control" parent="timerCounterr"]
margin_left = 24.5256
margin_top = -7.46898
margin_right = 64.5256
margin_bottom = 32.531
script = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="timerCounterr/Countdown"]
position = Vector2( -74.7187, 28.0819 )
scale = Vector2( 3.46737, 1.58316 )
texture = ExtResource( 14 )

[node name="min" type="Label" parent="timerCounterr/Countdown"]
margin_left = -30.247
margin_top = 9.44
margin_right = 9.753
margin_bottom = 49.44
custom_fonts/font = SubResource( 13 )
text = "2"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sec" type="Label" parent="timerCounterr/Countdown"]
margin_left = 19.2179
margin_top = 9.43996
margin_right = 59.2179
margin_bottom = 49.44
custom_fonts/font = SubResource( 15 )
text = "1"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="dsec" type="Label" parent="timerCounterr/Countdown"]
margin_left = 69.03
margin_top = 9.44
margin_right = 109.03
margin_bottom = 49.44
custom_fonts/font = SubResource( 17 )
text = "0"

[node name="Label" type="Label" parent="timerCounterr/Countdown"]
margin_left = -273.119
margin_top = 10.1047
margin_right = -52.119
margin_bottom = 50.1047
custom_fonts/font = SubResource( 19 )
text = "Survive until:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="countDownTimer" type="Timer" parent="timerCounterr/Countdown"]
wait_time = 0.1

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5

[node name="darkenNode" type="Node2D" parent="."]
z_index = 9

[node name="AnimationPlayer" type="AnimationPlayer" parent="darkenNode"]
"anims/New Anim" = SubResource( 20 )

[node name="Timer2" type="Timer" parent="darkenNode"]
wait_time = 3.0

[node name="ColorRect" type="ColorRect" parent="darkenNode"]
margin_left = -151.655
margin_top = -111.822
margin_right = 3936.35
margin_bottom = 1002.18
color = Color( 0, 0, 0, 0 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="barrier" type="StaticBody2D" parent="."]
visible = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="barrier"]
position = Vector2( 1134.54, 443.621 )
shape = SubResource( 21 )

[node name="chargeSFX" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 21 )
volume_db = 5.714
pitch_scale = 0.91

[connection signal="tween_completed" from="movingCamera/Tween" to="." method="_on_Tween_tween_completed"]
[connection signal="body_entered" from="YSort/leaveAREA" to="." method="_on_leaveAREA_body_entered"]
[connection signal="body_entered" from="YSort/civilians/civilianTalk" to="." method="_on_civilianTalk_body_entered"]
[connection signal="body_entered" from="shootBox" to="." method="_on_shootBox_body_entered"]
[connection signal="body_exited" from="shootBox" to="." method="_on_shootBox_body_exited"]
[connection signal="timeout" from="timerCounterr/Countdown/countDownTimer" to="timerCounterr/Countdown" method="_on_countDownTimer_timeout"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="darkenNode/Timer2" to="." method="_on_Timer2_timeout"]

[editable path="Camera2D"]
[editable path="YSort/Pillars/Pillar"]
[editable path="YSort/Pillars/Pillar2"]
[editable path="YSort/Pillars/Pillar3"]
[editable path="YSort/Pillars/Pillar4"]
[editable path="YSort/Pillars/Pillar8"]
[editable path="YSort/Pillars/Pillar9"]
[editable path="YSort/Pillars/Pillar10"]
[editable path="YSort/Pillars/Pillar11"]
[editable path="YSort/Pillars/Pillar12"]
[editable path="YSort/Pillars/Pillar13"]
[editable path="YSort/Pillars/Pillar14"]
[editable path="YSort/Pillars/Pillar22"]
